# structural_analysis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Examples/: Frame_Truss.py  Hinged_Fixed_2D_Frame.py  Pyramid_Frame.py  Two_Story_Frame.py
StructuralAnalysis/: DegreeOfFreedom.py  Material.py  Node.py  Section.py  Solver.py  Structure.py  Visualization.py  __SolverHelper.py  __init__.py  __main__.py
StructuralAnalysis/FrameElements/: Element.py  FrameElement.py  TrussElement.py  TwoDimensionalFrameElement.py  TwoDimensionalTrussElement.py  __init__.py
docs/: conf.py  index.rst  modules.rst
docs/.ipynb_checkpoints/: example-checkpoint.ipynb
docs/Examples/: Frame_Truss.py  Hinged_Fixed_2D_Frame.py  Pyramid_Frame.py  Two_Story_Frame.py  truss_roof.py  verify.py
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  structural_analysis.FrameElements.doctree  structural_analysis.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  structural_analysis.FrameElements.html  structural_analysis.html
src/structural_analysis/: __init__.py  __main__.py  constraint.py  coordinate_system.py  degree_of_freedom.py  load.py  material.py  node.py  output.py  section.py  solver.py  structure.py  trial.py  vector.py  visualizer.py
src/structural_analysis/frame_elements/: __init__.py  element.py  frame_element.py  truss_element.py  two_dimensional_frame_element.py  (+1 more)
tests/: test_structural_analysis.py
(+62 files in other folders)
